--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,8 @@
   <link rel="icon" type="image/x-icon" href="https://aplicaciones.aragon.es/favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap" rel="stylesheet">
   
-  <script src="/lib/jquery/jquery_1.12.4.min.js"></script>
-  <script src="/lib/jquery.dotdotdot/jquery.dotdotdot.min.js"></script>
+  <script src="./assets/jquery_1.12.4.min.js"></script>
+  <script src="./assets/dotdotdot.min.js"></script>
 
 </head>
 <body>
