background-color + año en capas

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="es">
+<html lang="es" style="height: 100%;">
 <head>
   <meta http-equiv="expires" content="0">
   <meta http-equiv="Cache-control" content="no-cache, no-store, must-revalidate">
@@ -15,7 +15,7 @@
   <script src="./assets/dotdotdot.min.js"></script>
 
 </head>
-<body>
+<body style="height: 100%;">
   <app-root></app-root>
 </body>
 </html>
